--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -10,6 +10,12 @@ header{
     position: absolute;
     z-index: 2;
     background-attachment: fixed;
+}body{
+    display: grid;
+    justify-content: end;
+    align-content: end;
+    line-height: 1.4;
+    background: #e8e8e8;
 }
 div{
     padding: 5px;
@@ -21,6 +27,7 @@ p{
    line-height: 1.4;
    text-align: justify;
    font-family: sans-serif;
+   font-size: 20px;
 }
 #logo{
     margin-left: 10px;
@@ -168,6 +175,17 @@ nav a:hover
     font-weight: bold;
     font-size: 20px;
 }
+.alignleft{
+    float: left;
+    margin: 80px;
+}
+hr{
+    clear: both;
+}
+.alignright{
+    float: right;
+    margin: 60px;
+}
 img{
     transform: scale(1.5, 1.5);
     -webkit-animation-name: zoomin;
@@ -222,20 +240,6 @@ img{
     .temoignage a {
         font-size: 12px;
     }
-}
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'poppins' sans-serif;
-}
-body{
-    display: grid;
-    justify-content: end;
-    align-content: end;
-    line-height: 1.4;
-    background: #e8e8e8;
-    
 }
 footer{
     background: #fff;
